Changed docker image

--- a/k8s/iperf-client-job.yaml
+++ b/k8s/iperf-client-job.yaml
@@ -10,7 +10,7 @@ spec:
     spec:
       containers:
       - name: iperf-client
-        image: markbnj/cluster-iperf:0.0.1
+        image: pvijayaragav/kube-perf:latest
         env:
         - name: ROLE
           value: client
